--- a/.github/workflows/new_secrets.yml
+++ b/.github/workflows/new_secrets.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Test Secret variable
         run: |
           echo "$DEVOPS"
-          if [ "${{ secrets.SECRET_TOKEN }}" == "Tavant_India" ]
+          if [ "$DEVOPS" == "Tavant_India" ]
           then 
             echo "Got out Secret"
           fi
