--- a/.github/workflows/new_secrets.yml
+++ b/.github/workflows/new_secrets.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Test Secret variable
         run: |
           echo "$DEVOPS"
-          if [ "$DEVOPS" == "Tavant_India" ];
+          if [ "$DEVOPS" == "Baskar" ];
           then 
             echo "Got out Secret"
           fi
         env:
-          DEVOPS: ${{ secrets.SECRET_TOKEN }}
+          DEVOPS: ${{ secrets.tavant_secrets }}
      
       - name: Print Environment Variables
         run: |
