--- a/.github/workflows/new_secrets.yml
+++ b/.github/workflows/new_secrets.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Test Secret variable
         run: |
           echo "$DEVOPS"
-          if [ "$DEVOPS" == "Baskar" ];
+          if [ "$DEVOPS" == "Baskar" ]
           then 
             echo "Got out Secret"
           fi
